# fastapi-in-lambda

./: .gitignore  .pre-commit-config.yaml  README.md  create-table.sh  docker-compose.yml  pyproject.toml
application/tests/: conftest.py  test_get_account.py  test_post_transaction.py
application/vivaldi/: app.py  exceptions.py  persistence.py
infrastructure/: app.py
infrastructure/stacks/: stack.py
